# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-05-07 19:29:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-32

    Summary:
      merge fixes from the 0.8 branch
    Revision:
      itools--main--0.9--patch-32

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-85
       xhtml, fix "get_messages"
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-87
       i18n, fix igettext
    

    modified files:
     Changelog i18n/igettext.py xhtml/XHTML.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.8--patch-85
     jdavid@itaapy.com--public/itools--main--0.8--patch-87


2005-05-07 17:23:12 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-31

    Summary:
      zope, remove obsolete code
    Revision:
      itools--main--0.9--patch-31


    modified files:
     Changelog zope/Context.py zope/Request.py zope/Response.py
     zope/__init__.py zope/utils.py


2005-05-06 17:16:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-30

    Summary:
      types, add "FileName.encode"
    Revision:
      itools--main--0.9--patch-30


    modified files:
     Changelog types/__init__.py


2005-05-06 15:54:33 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-29

    Summary:
      catalog, index common words and one letter words too
    Revision:
      itools--main--0.9--patch-29


    modified files:
     Changelog catalog/Analysers.py catalog/Catalog.py


2005-05-06 15:37:29 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-28

    Summary:
      catalog, add phrase search
    Revision:
      itools--main--0.9--patch-28


    modified files:
     Changelog catalog/Analysers.py catalog/Catalog.py
     catalog/IIndex.py catalog/test.py


2005-05-06 13:52:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-27

    Summary:
      catalog, keep document positions
    Revision:
      itools--main--0.9--patch-27

    The index format has changed.
