@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-05-08 14:31:53 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-33
+
+    Summary:
+      handlers, fix "KeyValue"
+    Revision:
+      itools--main--0.9--patch-33
+
+
+    modified files:
+     Changelog handlers/KeyValue.py
+
+
 2005-05-07 19:29:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-32
 
     Summary:
